tests/NormalTests/paczka2/big_fuzzy/85195285.err
Error in line 3: dQQvoJ S844 93,8
Error in line 11: x5L5pgS S844 60,4
Error in line 15: x5L5pgS A977 70,4
Error in line 29: A660 A660 63,6
Error in line 36: A660 A935 65,4
Error in line 35: GHj A977 83,8
Error in line 24: iCX S844 0,3
Error in line 44: dQQvoJ S844 43,4
Error in line 60: 0QRi A935 13,7
Error in line 55: x5L5pgS S844 37,3
Error in line 61: 0QRi A660 94,2
Error in line 58: iCX A935 23,9
Error in line 66: 0QRi S844 60,1
Error in line 65: dQQvoJ S844 70,0
Error in line 86: x5L5pgS A935 86,3
Error in line 92: 0QRi A660 12,13
Error in line 87: A660 A660 28,6
Error in line 88: x5L5pgS S844 19,5
Error in line 96: x5L5pgS A935 52,5
Error in line 101: x5L5pgS A977 11,5
Error in line 115: x5L5pgS A977 83,3
Error in line 114: dQQvoJ A977 83,3
Error in line 117: x5L5pgS A935 54,2
Error in line 118: dQQvoJ A660 84,2
Error in line 134: 0QRi S844 29,3
Error in line 136: x5L5pgS S844 29,6
Error in line 155: x5L5pgS A660 15,0
Error in line 156: x5L5pgS S833 68,3
Error in line 165: 0QRi A935 4,2
Error in line 173: GHj A977 3,1
Error in line 158: x5L5pgS S844 120,4
Error in line 190: DiG S844 45,4
Error in line 180: iCX S844 310,7
Error in line 191: DiG A977 15,4
Error in line 193: DiG A935 50,6
Error in line 199: GHj A977 2$0,5
Error in line 197: DiG A660 25,6
Error in line 198: GHj A977 91,1
Error in line 206: x5L5pgS S844 50,3
Error in line 236: dQQvoJ A977 $7,$
Error in line 239: 0QRi S844 60,7
Error in line 231: DiG S844 340,8
